# scatterd

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  make_clean.sh  make_new_build.sh  make_new_release.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.py.old  test.py
.github/: FUNDING.yml
.github/workflows/: pytest.yml
docs/pages/: Coding quality.html  Documentation.html  Examples.html  Tutorials.html  genindex.html  index.html  objects.inv  py-modindex.html  scatterd.scatterd.html  searchindex.js  sponsor.html
docs/pages/_sources/: Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt
docs/pages/_static/: documentation_options.js
docs/pages/doctrees/: Coding quality.doctree  Documentation.doctree  Examples.doctree  Installation.doctree  Tutorials.doctree  environment.pickle  index.doctree  scatterd.scatterd.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Coding quality.html  Documentation.html  Examples.html  Installation.html  Tutorials.html  genindex.html  index.html  objects.inv  py-modindex.html  scatterd.scatterd.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt  Tutorials.rst.txt  index.rst.txt  scatterd.scatterd.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Coding quality.rst  Documentation.rst  Examples.rst  Installation.rst  conf.py  index.rst  scatterd.scatterd.rst
scatterd/: __init__.py  examples.py  scatterd.py
scatterd/tests/: test_scatterd.py
